--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -16,7 +16,9 @@
             "program": "${workspaceFolder}/node_modules/mocha/bin/_mocha",
             "request": "launch",
             "skipFiles": [
-                "<node_internals>/**"
+                "<node_internals>/**",
+                ".eslintrc.js",
+                "${workspaceFolder}/node_modules/**/*"
             ],
             "type": "pwa-node"
         },
